k3s/stirling-pdf/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
  namespace: utilities
  labels:
    app: stirling-pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      containers:
        - name: stirling-pdf
          image: docker.stirlingpdf.com/stirlingtools/stirling-pdf
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "10m"
            limits:
              memory: "1024Mi"
              cpu: "800m"
