k3s/stirling-pdf/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf-svc
  namespace: utilities
spec:
  selector:
    app: stirling-pdf
  ports:
    - name: http
      port: 80
      targetPort: 8080
