k3s/stirling-pdf/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf-ingress
  namespace: utilities
spec:
  rules:
    - host: pdf.enoal.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stirling-pdf-svc
                port:
                  number: 80
